--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,13 @@ spring.application.name=recipeapp
 spring.datasource.url=jdbc:postgresql://localhost:5432/recipe_db
 logging.level.org.springframework.security=DEBUG
 
+#Cambio de puerto
+server.port=9090
+
 
 # Credenciales de PostgreSQL
 spring.datasource.username=postgres
-spring.datasource.password=luca
+spring.datasource.password=dapp
 
 # Dialecto y DDL
 spring.jpa.hibernate.ddl-auto=update
