nueva password del admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.org.springframework.security=DEBUG
 
 # Credenciales de PostgreSQL
 spring.datasource.username=postgres
-spring.datasource.password=luca
+spring.datasource.password=admin
 
 # Dialecto y DDL
 spring.jpa.hibernate.ddl-auto=update
