--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=recipeapp
 spring.datasource.url=jdbc:postgresql://localhost:5432/recipe_db
 logging.level.org.springframework.security=DEBUG
+server.address=0.0.0.0
 
 
 # Credenciales de PostgreSQL
