endpoints implementados para recuperar contraseña

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,28 @@ server.address=0.0.0.0
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
-# Dialecto y DDL
+# Dialecto y DDL configuracion base de datos
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# (Opcional) para ver las sentencias SQL en consola
 spring.jpa.show-sql=true
+
+
+# ? Gmail SMTP
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+
+# Tu cuenta de Gmail
+spring.mail.username=receipeapp.noreply@gmail.com
+spring.mail.password=jxcowdfoagvtvbuw
+
+
+
+# Requerido por Gmail
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=true
+
+
+
 
