--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,6 @@ spring.mail.properties.mail.debug=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+# Debe ser un string en Base64 de al menos 512 bits
+jwt.secret=VGhpcyBpcyBhIHNlY3JldCBrZXkgc3RhdGljYSBlbiBCYXNlNjQuLi4=
+
