--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,43 +1,37 @@
-# application.properties
-
-# ----------------------------------------------------------------
-# GENERAL
-# ----------------------------------------------------------------
 spring.application.name=recipeapp
-server.address=0.0.0.0
+spring.datasource.url=jdbc:postgresql://localhost:5432/recipe_db
 logging.level.org.springframework.security=DEBUG
+server.address=0.0.0.0
 
-# ----------------------------------------------------------------
-# DATASOURCE
-# ----------------------------------------------------------------
-# En local, caerá a localhost; en Railway o cualquier otro host,
-# se recogerá SPRING_DATASOURCE_URL / USERNAME / PASSWORD de las env vars.
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/recipe_db}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:admin}
 
-# ----------------------------------------------------------------
-# JPA / HIBERNATE
-# ----------------------------------------------------------------
+# Credenciales de PostgreSQL
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+# Dialecto y DDL configuracion base de datos
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 logging.level.org.hibernate.orm.connections.pooling=warn
 
-# ----------------------------------------------------------------
-# SMTP (GMAIL)
-# ----------------------------------------------------------------
+
+# ? Gmail SMTP
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${SPRING_MAIL_USERNAME:receipeapp.noreply@gmail.com}
-spring.mail.password=${SPRING_MAIL_PASSWORD:jxcowdfoagvtvbuw}
+
+# Tu cuenta de Gmail
+spring.mail.username=receipeapp.noreply@gmail.com
+spring.mail.password=jxcowdfoagvtvbuw
+
+
+
+# Requerido por Gmail
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.debug=true
 
-# ----------------------------------------------------------------
-# UPLOAD / MULTIPART
-# ----------------------------------------------------------------
+## Maximo permitido por tamaño de archivos
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
