--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=recipeapp
-spring.datasource.url=jdbc:postgresql://localhost:5432/recipe_db
+spring.datasource.url=${SPRING_DATASOURCE_URL}
 logging.level.org.springframework.security=DEBUG
 server.address=0.0.0.0
 
 
 # Credenciales de PostgreSQL
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # Dialecto y DDL configuracion base de datos
 spring.jpa.hibernate.ddl-auto=update
