--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=recipeapp
-spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.url=jdbc:${SPRING_DATASOURCE_URL}
 logging.level.org.springframework.security=DEBUG
 server.address=0.0.0.0
 
