--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=recipeapp
-spring.datasource.url=jdbc:${SPRING_DATASOURCE_URL}
+spring.datasource.url=jdbc:postgresql://nozomi.proxy.rlwy.net:31245/railway
 logging.level.org.springframework.security=DEBUG
 server.address=0.0.0.0
 
 
 # Credenciales de PostgreSQL
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.username=postgres
+spring.datasource.password=tJCLylCGPkQUlivXQfMOJGCNaJxtCTKN
 
 # Dialecto y DDL configuracion base de datos
 spring.jpa.hibernate.ddl-auto=update
